fix dark mode issue on hero text

--- a/src/components/accessible-demo/accessible-demo.scss
+++ b/src/components/accessible-demo/accessible-demo.scss
@@ -60,7 +60,7 @@
     }
 
     .h-alpha, .h-bravo, .h-delta, .MagentaA11y__nav-display__subtitle {
-      color: var(--color-text-on-primary);
+      color: var(--footer-text-color);
       font-weight: bold;
     }
 
